--- a/views/userSearch.ejs
+++ b/views/userSearch.ejs
@@ -35,7 +35,7 @@
     <div class="article_div">
 
         <div>
-            <h3 style="color: rgb(187, 187, 187);">(소프트웨어/IT) 직군 사용자 검색</h3>
+            <h3 style="color: rgb(187, 187, 187);"><%= jobPart %> 직군 사용자 검색</h3>
         </div>
 
         <div class="container-fluid">
@@ -166,6 +166,7 @@
                 <div style="float: right; width: 50%;">
                     <span class="form_control_label">학과</span>
                 </div>
+
             </div>
             <div class="result_div">
                 <div id="std_list_parent">
