--- a/views/login.ejs
+++ b/views/login.ejs
@@ -24,23 +24,23 @@
                     <table>
                         <tr>
                             <td>
-                                <input class='login_input' type="text" placeholder="아이디" / id="login_id">
+                                <input class='login_input' type="text" placeholder="아이디" / id="login_id" tabindex="1">
                                 </br>
                             </td>
 
                             <td rowspan="2">
-                                <button id="loginButton">로그인</button>
+                                <button id="loginButton" tabindex="3">로그인</button>
                             </td>
 
                         </tr>
                         <tr>
                             <td>
-                                <input class='login_input' type="password" placeholder="비밀번호" / id="login_password">
+                                <input class='login_input' type="password" placeholder="비밀번호" / id="login_password" tabindex="2">
                             </td>
                         </tr>
                         <tr>
                             <td colspan="2">
-                                <p id="join_Button">회원가입</p>
+                                <p id="join_Button" tabindex="4">회원가입</p>
                             </td>
                         </tr>
                     </table>
