--- a/public/stylesheets/userSearch.css
+++ b/public/stylesheets/userSearch.css
@@ -110,8 +110,10 @@ body,html{
 
 .result_div {
     margin-top: 2px;
-    border-top: 4px solid #c30e2e;
-    border-bottom: 2px solid #c30e2e;
+    border-top: 2px solid #d32f2f;
+    border-bottom: 3px solid #9a0007;
+    border-left: 1px solid #707070;
+    border-right: 1px solid #707070;
     background-color: rgba(32, 32, 32, .72);
     height: 360px;
     overflow: auto;
